# bodge

./: .bodge  .gitignore  CMakeLists.txt  GITHUB_PAGES_SETUP.md  LICENSE  Makefile  README.md  RELEASING.md  SETUP_PAGES_NOW.md  branch_feature.txt  enhanced_example.bodge  game_engine_example.bodge  license.txt  make.bat  release_notes.txt  test_platform.bodge
.github/workflows/: build.yml  deploy-docs.yml  pages.yml  release.yml
docs/: Gemfile  README.md  _config.yml  automatic-source-collection.md  configuration.md  contributing.md  daemon-mode.md  examples.md  getting-started.md  index.md  internationalization.md  windows-terminal-setup.md
docs/_layouts/: default.html
docs/assets/css/: style.scss
examples/: architecture_example.bodge  c_project_example.bodge  daemon_example.bodge  enhanced_example.bodge  example.bodge  invalid_config_example.bodge  invalid_target_example.bodge  multi_folder_example.bodge  simple_auto_example.bodge
scripts/: create-release.bat  create-release.sh  fix-console-unicode.bat  fix-console-unicode.ps1
src/: Architecture.cpp  Architecture.h  BuildLogger.cpp  BuildLogger.h  BuildSystem.cpp  BuildSystem.h  ConfigParser.cpp  ConfigParser.h  FileSystemUtils.cpp  FileSystemUtils.h  FileWatcher.cpp  FileWatcher.h  ProgressBar.cpp  ProgressBar.h  ProjectConfig.cpp  ProjectConfig.h  StringUtils.cpp  StringUtils.h  Strings.cpp  Strings.h  core.cpp  core.h  git.cpp  git.h  main.cpp
